section headings are now all capitalised.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3350,7 +3350,7 @@ The DOL serializations also supports the \termref{annotation} of existing OMS vi
 
 %A list of recommended RDF vocabularies for annotating OMS is presented in annex \ref{a:lola}.
 
-\clause{DOL abstract syntax}\label{c:abstract-syntax}
+\clause{DOL Abstract Syntax}\label{c:abstract-syntax}
 
 \sclause{Abstract syntax categories}
 
@@ -3949,7 +3949,7 @@ prefix maps, even if the serialization does not support prefix maps otherwise.
 %% ~\todonote[author=Christoph Lange,date=D:201108061340+02'00',type=todo]{Properly integrate this text from our LaRC 2011 paper} Annotations always have a subject, which is identified by an IRI. Where the given OMS language does not provide a way of assigning IRIs to a desired subject of an annotation (\eg if one wants to annotate an import in OWL), a library may employ RDF annotations that use XPointer or \nisref{IETF/RFC 5147} as a means of non-destructively referencing pieces of XML or text by URI.\footnote{We intend to utilize the extensibility of the XPointer framework by developing additional XPointer schemes, \eg for pointing to subterms of Common Logic sentences.}
 
 
-\clause{DOL text serialization}\label{a:text-syntax}
+\clause{DOL Text Serialization}\label{a:text-syntax}
 
 \sclause{Document type}
 
@@ -4299,7 +4299,7 @@ The following cases apply for injecting identifiers into fragments of OMS langua
 
 Where the given OMS language does not provide a way of assigning IRIs to a desired subject of an annotation (\eg if one wants to annotate an import in OWL), a library may employ RDF annotations that use 
 
-\clause{DOL semantics}\label{c:semantics}
+\clause{DOL Semantics}\label{c:semantics}
 
 %We pursue a threefold approach of assigning a semantics to the DOL
 %abstract syntax:
