changes to table 0.1 bullets 6.5.3(a) and (b) to reflect the existence of smof models.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -841,7 +841,7 @@ DOL provides such a construct with syntax \syntax{o keep logic},  see \ref{c:foc
 Proposals shall provide a specification of a metalanguage for links such as imports,
 interpretations, refinements, and alignments between OMS/modules.
 	&
-DOL covers several metalogical relationships, namely entailments, interpretations, equivalences, refinements, alignments and module relations, see \ref{c:oms-mappings} and \ref{a:dol-text:mappings}.\ednote{Terry: Do you want to mention institutions here, presaging 6.5.4 ? and add 8.4 to the see list? Till: I do not fully understand.}
+DOL covers several metalogical relationships, namely entailments, interpretations, equivalences, refinements, alignments and module relations, see \ref{c:oms-mappings} and \ref{a:dol-text:mappings}.
 	\\ \hline
 %
 6.5.1(g) & 
@@ -884,15 +884,15 @@ any logic, see the semantics in \ref{c:direct-sematics}. DOL uses IRIs for refer
 %
 6.5.3(a)& 
 An abstract syntax specified as an SMOF compliant meta model.	&
-Currently, the abstract syntax is specified using EBNF, see clause \ref{c:abstract-syntax}. An 
-initial SMOF meta model is given in annex \ref{a:MOF}.
+Currently, the abstract syntax is specified using EBNF, see clause \ref{c:abstract-syntax}. The
+SMOF meta model is given in annex \ref{a:MOF}.
    \\ \hline
 %
 6.5.3(b)& 
 A human-readable lexical concrete syntax in EBNF and serialization in XML, for the latter XMI shall
 be used.	&
 The concrete syntax (in EBNF) is specified in clause \ref{a:text-syntax}. The XMI representation 
-will be automatically derived from the SMOF meta model.
+is automatically derived from the SMOF meta model.
    \\ \hline
 %
 6.5.3(c)& 
