- removed ednote - harmonised "distributed ontology, MODEL, and specification language" vs "distributed ontology, MODELING, and specification language"

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1130,7 +1130,7 @@ with DOL.
 
 \end{longtable}
 \end{center}
-\ednote{in 6.8(c), also mention at least UML class diagrams}
+
 
 \section{Proof of Concept}
 Prototypical open source tools for DOL are already available, see
@@ -1146,7 +1146,7 @@ This specification proposes no changes to adopted OMG specifications.
 
 \chapter{Scope}
 \pagenumbering{arabic} 
-This \IS specifies the Distributed Ontology, Modeling and Specification
+This \IS specifies the Distributed Ontology, Model and Specification
  Language (DOL)\index{\dolindex ! definition}.  DOL is designed to achieve integration  
 and interoperability of
 ontologies, specifications and models (OMS for short). DOL is a language for
@@ -1188,7 +1188,7 @@ OMS languages, even if they have different levels of expressiveness.
 This \IS faces this diversity not by proposing yet another OMS language that would subsume all the others.  
 Instead, it accepts the diverse reality and formulates means (on a sound and formal semantic basis) 
 to compare and integrate OMS that are written in different formalisms.
-It specifies DOL (Distributed Ontology, Modeling and Specification Language), a formal language for
+It specifies DOL (Distributed Ontology, Model and Specification Language), a formal language for
 expressing not only OMS but also mappings between OMS formalized in different OMS languages.
 
 Thus, DOL gives interoperability a formal grounding and makes heterogeneous OMS and services based
@@ -1255,7 +1255,7 @@ stating sentences about them
 \item mappings between services and devices, and definitions of service and device interoperability.
 \end{enumerate}
 
-This \IS describes the syntax and the semantics of the Distributed Ontology, Modeling and
+This \IS describes the syntax and the semantics of the Distributed Ontology, Model and
 Specification Language (DOL) by defining an abstract syntax and an associated model-theoretic
 semantics for DOL. 
 
@@ -1583,10 +1583,10 @@ refer to this section if definitions of terms are needed.}
 
 For the purposes of this document, the following terms and definitions apply.
 
-\sclause{Distributed Ontology, Modeling and Specification Language}
+\sclause{Distributed Ontology, Model and Specification Language}
 
 \begin{definitions}
-  \termdefinitionLight{Distributed Ontology, Modeling and Specification Language\synonym
+  \termdefinitionLight{Distributed Ontology, Model and Specification Language\synonym
   DOL}\index{\dolindex ! definition}{language for formalizing {libraries}\index{library} of \termref{OMS} and OMS networks\index{OMS network}, 
   whose syntax and semantics are specified in this \IS}
 
@@ -2385,7 +2385,7 @@ As listed below, these symbols and abbreviations are generally for the main clau
 \symboldef{CURIE}{Compact URI expression}
 \symboldef{CWM}{Common Warehouse Metamodel}
 \symboldef{DDL}{Distributed description logic}
-\symboldef{DOL}{Distributed Ontology, Modeling and Specification Language}
+\symboldef{DOL}{Distributed Ontology, Model and Specification Language}
 \symboldef{DTV}{Date-Time Vocabulary}
 \symboldef{EBNF}{Extended Backus-Naur Form}
 \symboldef{E-connections}{a modular ontology language (closely related to DDL)}
