minor language improvement

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1165,7 +1165,7 @@ machine-processable texts that carry a formal semantics. Among those fields are 
 of systems. Ontologies, models  and specifications will (for the purpose of this document) 
 henceforth be abbreviated as \textbf{OMS}\index{OMS}.
 
-An OMS provides formal descriptions which range in scope from domain knowledge and activities
+An OMS provides formal descriptions, which range in scope from domain knowledge and activities
 (ontologies, models) to properties and behaviors of hardware and software systems (models,
 specifications). These formal descriptions can be used for the analysis and verification of domain
 models, system models and systems themselves, using rigorous and effective reasoning tools.   As 
@@ -1175,8 +1175,8 @@ perspectives on a domain or system.
  Hence, interoperability becomes
 a crucial issue, in particular, formal interoperability, i.e.\ interoperability that is based on
 the formal semantics of the different viewpoints. Interoperability is both about the ability to 
-interface different domains and systems, to enable the use of several OMS in a common application
-scenario, as well as about coherence and consistency, ensuring at an early stage of the development
+interface different domains and systems and the ability to use several OMS in a common application
+scenario. Further,  interoperability is about coherence and consistency, ensuring at an early stage of the development
 that a coherent system can be reached.
 
 \ednote{@Till: the beginning of this paragraph needs revision}
