section 1.1: improvement in readability and grammar

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1179,16 +1179,16 @@ interface different domains and systems and the ability to use several OMS in a 
 scenario. Further,  interoperability is about coherence and consistency, ensuring at an early stage of the development
 that a coherent system can be reached.
 
-\ednote{@Till: the beginning of this paragraph needs revision}
+
 In complex applications, which involve multiple OMS with overlapping concept spaces,
-data mapping may also be  between different OMS, and is then called OMS \index{alignment}. 
+it is often necessary to identify correspondence between concepts in the different OMS; this is called  OMS alignment \index{alignment}. 
 While OMS alignment is most commonly studied for OMS formalized in the same OMS 
 language, the different OMS used by complex applications may also be written in different 
-OMS languages, even if they have different levels of expressiveness. 
+OMS languages, which may even vary in their expressiveness. 
 This \IS faces this diversity not by proposing yet another OMS language that would subsume all the others.  
 Instead, it accepts the diverse reality and formulates means (on a sound and formal semantic basis) 
 to compare and integrate OMS that are written in different formalisms.
-It specifies DOL (Distributed Ontology, Model and Specification Language), a formal language for
+It specifies DOL, a formal language for
 expressing not only OMS but also mappings between OMS formalized in different OMS languages.
 
 Thus, DOL gives interoperability a formal grounding and makes heterogeneous OMS and services based
