more edits in section 1

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1181,7 +1181,7 @@ that a coherent system can be reached.
 
 
 In complex applications, which involve multiple OMS with overlapping concept spaces,
-it is often necessary to identify correspondence between concepts in the different OMS; this is called  OMS alignment \index{alignment}. 
+it is often necessary to identify correspondence between concepts in the different OMS; this is called  OMS alignment\index{alignment}. 
 While OMS alignment is most commonly studied for OMS formalized in the same OMS 
 language, the different OMS used by complex applications may also be written in different 
 OMS languages, which may even vary in their expressiveness. 
@@ -1230,26 +1230,26 @@ MOF.}
 % Can't use \begin{inscope}, as that creates an itemize environment
 The following are within the scope of this \IS:
 \begin{enumerate}
-\item\label{it:scope-heterogeneous} homogeneous OMS as well as heterogeneous OMS (the combining parts written in different languages)
-\item mappings between OMS (mapping OMS symbols to OMS symbols)
-\item OMS as well as OMS networks (the latter involve several OMS and mappings between them)
-\item \label{it:scope-translation} translations between different OMS languages conforming with DOL (translating whole OMS to another language)
+\item\label{it:scope-heterogeneous} homogeneous OMS as well as heterogeneous OMS (OMS that consist of parts, which are written in different languages);
+\item mappings between OMS (mapping OMS symbols to OMS symbols);
+\item OMS networks (they involve several OMS and mappings between them);
+\item \label{it:scope-translation} translations between different OMS languages conforming with DOL (translating whole OMS to another language);
 \item\label{it:scope-annotation} annotation and documentation of OMS, mappings between OMS, symbols,
-and sentences
-\item recommendations of vocabularies for annotating and documenting OMS
-\item a syntax for embedding the constructs mentioned under (\ref{it:scope-heterogeneous})–(\ref{it:scope-annotation}) as annotations into existing OMS
-\item a syntax for expressing (\ref{it:scope-heterogeneous})–(\ref{it:scope-translation}) as standoff markup that points into existing OMS
-\item a formal semantics of (\ref{it:scope-heterogeneous})–(\ref{it:scope-translation})
-\item criteria for existing or future OMS languages to conform with DOL
+and sentences;
+\item recommendations of vocabularies for annotating and documenting OMS;
+\item a syntax for embedding the constructs mentioned under (\ref{it:scope-heterogeneous})–(\ref{it:scope-annotation}) as annotations into existing OMS;
+\item a syntax for expressing (\ref{it:scope-heterogeneous})–(\ref{it:scope-translation}) as standoff markup that points into existing OMS;
+\item a formal semantics of (\ref{it:scope-heterogeneous})–(\ref{it:scope-translation});
+\item criteria for existing or future OMS languages to conform with DOL.
 \end{enumerate}
 
 The following are outside the scope of this \IS:
 \begin{enumerate}
 \item the (re)definition of elementary OMS languages, \ie languages that allow the declaration of OMS symbols (non-logical symbols) 
 and
-stating sentences about them
-\item algorithms for obtaining mappings between OMS
-\item concrete OMS and their conceptualization and application
+stating sentences about them;
+\item algorithms for obtaining mappings between OMS;
+\item concrete OMS and their conceptualization and application;
 %% I believe that this is really obsolete now. –Christoph Lange, 2011-12-13
 % \item a formal definition of interoperability and how to measure the degree of interoperability of two systems\todonote[author=Christoph Lange,date=D:201110182133+02'00']{Well, now this might even be in scope.  We'll see...}
 \item mappings between services and devices, and definitions of service and device interoperability.
