missing end in app. I

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -7840,6 +7840,7 @@ end
 
 entailment Ent = SingleModel entails { . not ( A=>B ) }
 end
+\end{lstlisting}
 
 
 \sclause{Mereology: Distributed and Heterogeneous Ontologies}
