edits in section 2.1 - removed redundant sentence - fixed error in rationale

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1262,16 +1262,14 @@ semantics for DOL.
 
 \chapter{Conformance}\label{c:conformance}
 \index{conformance|(}
-This clause defines conformance criteria for languages and logics that can be used with the
-distributed ontology, modeling and specification language DOL, as well as conformance criteria for
-serializations, translations and applications. This \IS describes the conformance with DOL of a
-number of OMS languages, namely OWL 2, Common Logic, RDF and RDFS, as well as translations among
-these, in its informative annexes.
+This clause defines conformance criteria for languages and logics that can be used with DOL, as well as conformance criteria for
+serializations, translations and applications. The conformance of a
+number of OMS languages (namely OWL 2, Common Logic, RDF and RDFS, UML Class Diagrams, CASL) as well as translations among
+these is discussed in informative annexes of this \IS.
 
-It is expected that DOL will be used for more languages than this normative set of DOL-conforming
-languages. There will be a \textbf{\termref{registry} for DOL-conforming languages and translations} hosted
-at \url{http://ontohub.org}.  This will ensure that this \IS remains interoperable with past,
-present and even future OMS languages.  The registry shall also include descriptions of
+It is expected that DOL will be used for other languages than the  set of DOL-conforming
+languages that are discussed in this \IS. There is a  \textbf{\termref{registry} for DOL-conforming languages and translations} hosted
+at \url{http://ontohub.org}.  The registry shall also include descriptions of
 DOL-conforming languages and translations (as well as other information needed by implementors
 and users) in machine-processable form.  
 
@@ -1286,13 +1284,13 @@ expected to become the basis for normative activities.
 Rationale: for an OMS language to conform with DOL,
 \begin{itemize}
 \item its logical language aspect\index{language aspect ! logical} either needs to satisfy certain criteria about its abstract
-syntax or formal semantics itself, or there must be a translation (again satisfying certain
+syntax and formal semantics itself, or there must be a translation (again satisfying certain
 criteria) to a language that already is DOL-conforming.
 \item its structuring language aspect\index{language aspect ! structuring} (if present) must not conflict with DOL's own structuring
 mechanisms
 \item its annotation language aspect\index{language aspect ! annotation} must not conflict with DOL's meta-language constructs.
 \end{itemize}
-We also define different conformance levels with respect to the usage of IRIs as identifiers for all kinds
+We  define different conformance levels with respect to the usage of IRIs as identifiers for all kinds
 of entities that the OMS language supports.
 
 %
@@ -1307,8 +1305,6 @@ An OMS language is conforming with DOL if it satisfies the following conditions:
 \begin{enumerate}
 \item its abstract syntax is specified as an SMOF compliant meta model
 or as an EBNF grammar;
-\item its logical language aspect\index{language aspect ! logical} (for expressing basic OMS) is conforming,
- and in particular has a semantics (see below),
 \item it has at least one serialization in the sense of section~\ref{c:conform:serialization};
 %\item complete round-trip mappings from the human-readable serialization
 %to the abstract syntax and vice versa;
@@ -1332,8 +1328,8 @@ the logic corresponding to the whole logical language aspect) is presented as an
 institution \cite{GoguenBurstall92}.
 % It may additionally be presented as an institution, leading
 %to the possibility of interpreting additional DOL language constructs.%
-\footnote{Institutions are necessarily monotonic; conformance criteria for non-monotonic logics are
-still under development. However, minimization provides non-monotonic reasoning in DOL. It is also possible to include non-monotonic logics by construing entailments between formulas as sentences of the institution.} Note that one OMS language can have several sublanguages or profiles 
+%\footnote{Institutions are necessarily monotonic; conformance criteria for non-monotonic logics arestill under development. However, minimization provides non-monotonic reasoning in DOL. It is also possible to include non-monotonic logics by construing entailments between formulas as sentences of the institution.} 
+Note that one OMS language can have several sublanguages or profiles 
 corresponding to several logics (for example, OWL 2 has profiles EL, RL and QL, apart from the
 whole OWL 2 itself).
 
